tests/ui/privacy/breakit.stderr
error: missing optimized MIR for `breakit::m::Unreachable::generic::<i32>` in the crate `breakit`
   |
note: missing optimized MIR for this item (was the crate `breakit` compiled with `--emit=metadata`?)
  --> $DIR/auxiliary/breakit.rs:29:9
   |
LL |         pub fn generic<T>() {}
   |         ^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

